--- a/index.html
+++ b/index.html
@@ -12,33 +12,76 @@
     <header>
 
       <div class="container header-group">
-        <a href="index.html">
+        <a href="#mv">
           <img class="logo" src="img/logo.png" alt="ロゴ">
         </a>
 
         <div class="menu-box">
-          <nav>
-            <ul class="nav">
-              <li class="nav-list">
-                <a href="#portfolio">Portfolio</a>
-              </li>
-            </ul>
-          </nav>
+          <span class="list-bar"></span>
+          <span class="list-bar"></span>
+          <span class="list-bar"></span>
         </div>
+
+        <nav>
+          <ul class="nav">
+            <li class="nav-list">
+              <a href="#portfolio">Portfolio</a>
+            </li>
+
+            <li class="nav-list">
+              <a href="#feature">Feature</a>
+            </li>
+
+            <li class="nav-list">
+              <a href="profile">Profile</a>
+            </li>
+
+            <li class="nav-list">
+              <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
       </div>
 
 
     </header>
 
-    <section class="main-visual"></section>
+    <section id="mv">
+      <div class="container">
+        <h1 class="mv-title">Lorem Ipsum</h1>
+        <p class="mv-text">simply dummy text of the printing</p>
+      </div>
+    </section>
 
-    <section id="portfolio"></section>
+    <section id="portfolio">
+      <div class="container">
+        <h2 class="heading">
+          "Portfolio
+          ::after
+        </h2>
 
-    <section class="feature"></section>
+        <p class="heading-text">
+          "It is a long established fact that a reander will be distracted by the readable<br>
+          content of a page when looking at its layout.<br class="sp-none">
+          The point of using Lorem Ipsum is that it has a more-or-less normal distributtion letters"
+        </p>
 
-    <section class="profile"></section>
+        <div class="production-group">
+          <div class="production bg-1 sp-none"></div>
+          <div class="production bg-2"></div>
+          <div class="production bg-3 sp-none"></div>
+          <div class="production bg-4"></div>
+          <div class="production bg-5 sp-none"></div>
+          <div class="production bg-6"></div>
+        </div>
+      </div>
+    </section>
 
-    <section class="contact"></section>
+    <section id="feature"></section>
+
+    <section id="profile"></section>
+
+    <section id="contact"></section>
 
 
     <footer></footer>
